...
        android:layout_marginTop="172dp"
        android:layout_marginBottom="19dp"
        android:text="Enter Reasons For Ban"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/EditTextReasons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnReasons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="224dp"
        android:text="Ban User"
        app:layout_constraintBottom_toBottomOf="parent"
...
