...
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="New Text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textIsAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="New Text"
...
        android:layout_row="6"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="Toggle Admin" />

    <Button
        android:id="@+id/buttonToggleBanned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:text="Toggle Banned" />
...
