...
        android:layout_width="137.3dp"
        android:layout_height="100dp"
        android:layout_marginTop="95dp"
        android:text="Profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnProfileHome"
        app:layout_constraintTop_toBottomOf="@+id/btnProfilePicture" />

    <Button
        android:id="@+id/btnProfileLogin"
        android:layout_width="137.3dp"
        android:layout_height="100dp"
...
        app:layout_constraintBottom_toTopOf="@+id/btnProfileHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="173dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="329dp"
...
